--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.12",
-    "express": "^4.18.2",
+    "cheerio": "^1.1.2",
+    "express": "^4.22.1",
     "node-ssdp": "^4.0.1",
-    "node-upnp-utils": "^1.0.0",
-    "socket.io": "^4.7.4",
+    "node-upnp-utils": "^1.0.3",
+    "socket.io": "^4.8.1",
     "upnp-device-client": "^1.0.2",
     "xml2js": "^0.6.2"
   }
